--- a/share/test/motion_sequence/Makefile
+++ b/share/test/motion_sequence/Makefile
@@ -5,4 +5,6 @@ OBJS = main.o behaviors.o
 BUILDS += buildComponent/motion
 LIBS += -lmotion
 
+CXXFLAGS += -DMT_IMPLEMENT_TEMPLATES
+
 include $(BASE)/make-generic
