--- a/share/test/motion_sequence/MT.cfg
+++ b/share/test/motion_sequence/MT.cfg
@@ -54,7 +54,7 @@ MotionController_W = [.1 .1 .2 .2 .2 1 1    .1 .1 .1 .1 .1 .1 .1]
 MotionController_tau = 0.01
 MotionController_maxJointStep = 0.01
 Motion Controller_listens = 0
-MotionController_followTrajectoryTimeScale = 1
+MotionController_followTrajectoryTimeScale = 1.
 
 TV_limits = [-2. 2.; -2. 2.; -2. 0.2; -2. 2.; -2. 0.2; -3. 3.; -2. 2.; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5; -1.5 1.5 ]
 
