added pipeline for IOC learning

--- a/usr/PE/14_imitationLearning/8_IOC_Seq_Learning/Makefile.gof
+++ b/usr/PE/14_imitationLearning/8_IOC_Seq_Learning/Makefile.gof
@@ -1,6 +1,6 @@
 BASE = ../../../../share
 
-OBJS = main.o
+OBJS = main.o motion_factory.o
 DEPEND = Core Motion Gui Optim Algo Ors
 PTHREAD = 1
 PHYSX = 1
