added ioc pr2 experiments

--- a/usr/PE/14_imitationLearning/8_IOC_Seq_Learning/MT.cfg
+++ b/usr/PE/14_imitationLearning/8_IOC_Seq_Learning/MT.cfg
@@ -8,6 +8,10 @@ swiftCutoff = 10.0
 visDemo = 0
 visTrain = 0
 visTest = 0
-loadDemoFromFile = 1
-scene = 1
+scene = 0
 
+# learning options
+learnTransitionCost = 0
+normalizeParam = 0
+numDem = 1
+verbose 0
