--- a/usr/PE/14_imitationLearning/9_IOC_PR2/MT.cfg
+++ b/usr/PE/14_imitationLearning/9_IOC_PR2/MT.cfg
@@ -5,9 +5,16 @@ timeSteps = 200.
 duration = 2.
 swiftCutoff = 10.0
 
+loadDemoFromFile = 0
+evalOnly=1
+
 visDemo = 0
 visTrain = 0
 visTest = 0
-loadDemoFromFile = 1
-scene = 1
+scene = 4
 
+# learning options
+learnTransitionCost = 0
+normalizeParam = 0
+numDem = 1
+verbose 0
