--- a/usr/PE/14_imitationLearning/12_IOC_Nonlinear/Makefile.gof
+++ b/usr/PE/14_imitationLearning/12_IOC_Nonlinear/Makefile.gof
@@ -1,6 +1,6 @@
 BASE = ../../../../share
 
-OBJS = main.o ../src/gaussian_costs.o ../src/rbf_costs.o
+OBJS = main.o ../src/ikmo.o ../src/motion_factory.o ../src/gaussian_costs.o ../src/rbf_costs.o
 DEPEND = Core Motion Gui Optim Algo Ors
 PTHREAD = 1
 PHYSX = 1
